More UI and Eventtime fixes. More conditions covered for time

--- a/drinkup/app/assets/stylesheets/event.css
+++ b/drinkup/app/assets/stylesheets/event.css
@@ -133,7 +133,7 @@
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
 }
 
-#show_event_chat_body > h3 {
+.chat > h3 {
   text-align:center;
 }
 .chatboxmessagecontent {
